# donna-assistant

./: .gitignore  DONNA.md  agent.md  render.yaml  setup.sh
.cursor/rules/: donna-assistant.mdc
backend/: README.md  env-example.txt  pyproject.toml  requirements.txt
backend/donna/: __init__.py  agent.py  config.py  database.py  google_auth.py  main.py  models.py  scheduler.py  server.py  telegram_bot.py
backend/donna/tools/: __init__.py  brain_dump.py  calendar.py  calendar_sync.py  calendly.py  clients.py  deals.py  github.py  gmail.py  handoff.py  projects.py  reviews.py  schedule.py  social.py  tasks.py  voice.py  youtube.py
backend/scripts/: setup_calendly_webhook.py
content/instagram/: ideas.md
content/tiktok/: ideas.md
content/youtube/: ideas.md
